--- a/index.html
+++ b/index.html
@@ -10,30 +10,42 @@
     <div class="container">
         <h1>Contador de Cédulas</h1>
         <form id="contadorForm">
-            <label for="nota200">Notas de R$200:</label>
-            <input type="number" id="nota200" value="0" min="0">
-
-            <label for="nota100">Notas de R$100:</label>
-            <input type="number" id="nota100" value="0" min="0">
-
-            <label for="nota50">Notas de R$50:</label>
-            <input type="number" id="nota50" value="0" min="0">
-
-            <label for="nota20">Notas de R$20:</label>
-            <input type="number" id="nota20" value="0" min="0">
-
-            <label for="nota10">Notas de R$10:</label>
-            <input type="number" id="nota10" value="0" min="0">
-
-            <label for="nota5">Notas de R$5:</label>
-            <input type="number" id="nota5" value="0" min="0">
-
-            <label for="nota2">Notas de R$2:</label>
-            <input type="number" id="nota2" value="0" min="0">
+            <fieldset>
+                <legend>Quantidade de Cédulas</legend>
+                <div class="input-group">
+                    <label for="nota200">Notas de R$200:</label>
+                    <input type="number" id="nota200" value="0" min="0">
+                </div>
+                <div class="input-group">
+                    <label for="nota100">Notas de R$100:</label>
+                    <input type="number" id="nota100" value="0" min="0">
+                </div>
+                <div class="input-group">
+                    <label for="nota50">Notas de R$50:</label>
+                    <input type="number" id="nota50" value="0" min="0">
+                </div>
+                <div class="input-group">
+                    <label for="nota20">Notas de R$20:</label>
+                    <input type="number" id="nota20" value="0" min="0">
+                </div>
+                <div class="input-group">
+                    <label for="nota10">Notas de R$10:</label>
+                    <input type="number" id="nota10" value="0" min="0">
+                </div>
+                <div class="input-group">
+                    <label for="nota5">Notas de R$5:</label>
+                    <input type="number" id="nota5" value="0" min="0">
+                </div>
+                <div class="input-group">
+                    <label for="nota2">Notas de R$2:</label>
+                    <input type="number" id="nota2" value="0" min="0">
+                </div>
+            </fieldset>
+            <div class="buttons">
+                <button type="button" onclick="calcularTotal()">Calcular</button>
+                <button type="button" onclick="resetForm()">Resetar</button>
+            </div>
         </form>
-        <div class="buttons">
-            <button onclick="resetForm()">Resetar</button>
-        </div>
         <h2>Total: R$ <span id="total">0.00</span></h2>
     </div>
     <script src="script.js"></script>
