--- a/index.html
+++ b/index.html
@@ -84,31 +84,31 @@
                 <legend>Quantidade de Cédulas</legend>
                 <div class="input-group">
                     <label for="nota200">Notas de R$200:</label>
-                    <input type="number" id="nota200" value="0" min="0" onchange="calcularTotal()">
+                    <input type="number" id="nota200" value="0" min="0">
                 </div>
                 <div class="input-group">
                     <label for="nota100">Notas de R$100:</label>
-                    <input type="number" id="nota100" value="0" min="0" onchange="calcularTotal()">
+                    <input type="number" id="nota100" value="0" min="0">
                 </div>
                 <div class="input-group">
                     <label for="nota50">Notas de R$50:</label>
-                    <input type="number" id="nota50" value="0" min="0" onchange="calcularTotal()">
+                    <input type="number" id="nota50" value="0" min="0">
                 </div>
                 <div class="input-group">
                     <label for="nota20">Notas de R$20:</label>
-                    <input type="number" id="nota20" value="0" min="0" onchange="calcularTotal()">
+                    <input type="number" id="nota20" value="0" min="0">
                 </div>
                 <div class="input-group">
                     <label for="nota10">Notas de R$10:</label>
-                    <input type="number" id="nota10" value="0" min="0" onchange="calcularTotal()">
+                    <input type="number" id="nota10" value="0" min="0">
                 </div>
                 <div class="input-group">
                     <label for="nota5">Notas de R$5:</label>
-                    <input type="number" id="nota5" value="0" min="0" onchange="calcularTotal()">
+                    <input type="number" id="nota5" value="0" min="0">
                 </div>
                 <div class="input-group">
                     <label for="nota2">Notas de R$2:</label>
-                    <input type="number" id="nota2" value="0" min="0" onchange="calcularTotal()">
+                    <input type="number" id="nota2" value="0" min="0">
                 </div>
             </fieldset>
             <div class="buttons">
@@ -119,44 +119,34 @@
     </div>
 
     <script>
+        // Adiciona um listener para o evento 'input' no formulário
+        document.getElementById('contadorForm').addEventListener('input', calcularTotal);
+
         function calcularTotal() {
-            // Valores das notas
-            const notas = {
-                200: parseFloat(document.getElementById('nota200').value) || 0,
-                100: parseFloat(document.getElementById('nota100').value) || 0,
-                50: parseFloat(document.getElementById('nota50').value) || 0,
-                20: parseFloat(document.getElementById('nota20').value) || 0),
-                10: parseFloat(document.getElementById('nota10').value) || 0,
-                5: parseFloat(document.getElementById('nota5').value) || 0,
-                2: parseFloat(document.getElementById('nota2').value) || 0
-            };
+            const notas = [
+                { id: 'nota200', valor: 200 },
+                { id: 'nota100', valor: 100 },
+                { id: 'nota50', valor: 50 },
+                { id: 'nota20', valor: 20 },
+                { id: 'nota10', valor: 10 },
+                { id: 'nota5', valor: 5 },
+                { id: 'nota2', valor: 2 }
+            ];
 
-            // Calcular total
-            let total = 0;
-            total += notas[200] * 200;
-            total += notas[100] * 100;
-            total += notas[50] * 50;
-            total += notas[20] * 20;
-            total += notas[10] * 10;
-            total += notas[5] * 5;
-            total += notas[2] * 2;
+            // Calcula o total
+            const total = notas.reduce((acc, nota) => {
+                const quantidade = parseFloat(document.getElementById(nota.id).value) || 0;
+                return acc + (quantidade * nota.valor);
+            }, 0);
 
-            // Atualizar o total na página
+            // Atualiza o valor exibido
             document.getElementById('total').textContent = total.toFixed(2);
         }
 
         function resetForm() {
-            // Resetar todos os campos para 0
-            document.getElementById('nota200').value = 0;
-            document.getElementById('nota100').value = 0;
-            document.getElementById('nota50').value = 0;
-            document.getElementById('nota20').value = 0;
-            document.getElementById('nota10').value = 0;
-            document.getElementById('nota5').value = 0;
-            document.getElementById('nota2').value = 0;
-            
-            // Atualizar o total
-            calcularTotal();
+            // Reseta o formulário e o total
+            document.getElementById('contadorForm').reset();
+            document.getElementById('total').textContent = "0.00";
         }
 
         // Calcular total inicial
